# WASI

./: .env  .gitignore  Agent Names.txt  README.md  README.txt  agent_config.yaml  analytics_agent.py  backup-before-filter-202606131558.bundle  main.py  my_agent.py  package-lock.json  package.json  pitch_deck.html  pyproject.toml  setup_db.py  setup_users_db.py  vercel_html.txt  wasi_band_server.py
baileys_auth_info/: app-state-sync-key-AAAAAK60.json  app-state-sync-key-AAAAAK61.json  app-state-sync-key-AAAAAK62.json  app-state-sync-key-AAAAAK63.json  app-state-sync-key-AAAAAK64.json  app-state-sync-key-AAAAAK6x.json  app-state-sync-key-AAAAAK6y.json  app-state-sync-key-AAAAAK6z.json  app-state-sync-version-critical_block.json  app-state-sync-version-critical_unblock_low.json  app-state-sync-version-regular.json  app-state-sync-version-regular_high.json  app-state-sync-version-regular_low.json  creds.json  device-list-245298551111892.json  identity-key-14719054282841_1.0.json  identity-key-158149302587523_1.0.json  identity-key-184224200007880_1.0.json  identity-key-192990580621507_1.0.json  identity-key-197817670861054_1.0.json  identity-key-210582330433616_1.0.json  identity-key-243748000813238_1.0.json  identity-key-245298551111892_1.29.json  identity-key-245298551111892_1.43.json  identity-key-247454708559946_1.1.json  identity-key-46999860686876_1.0.json  identity-key-47755909193738_1.0.json  identity-key-5437562822873_1.0.json  identity-key-59352169873578_1.50.json  identity-key-63449602228231_1.0.json  identity-key-75244219969660_1.5.json  (+3787 more)
frontend/: package.json  (+3 more)
(+129 files in other folders)
