[project]
name = "wasi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "band-sdk[langgraph]>=1.0.0",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
